force-app/main/default/objects/CRMforNonProfit__NNOSettings__c/CRMforNonProfit__NNOSettings__c.object-meta.xml
<CustomObject>
    <label>NNOSettings</label>
    <nameField>
        <label>NNOSettings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NNOSettings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>