force-app/main/default/objects/CRMforNonProfit__NNOSettings__c/fields/CRMforNonProfit__Account_Num_Blacklist__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Account_Num_Blacklist__c</fullName>
    <description>Seznam ignorovaných čísel účtů, oddělených čárkou</description>
    <label>Account Num. Blacklist</label>
    <type>TextArea</type>
</CustomField>