force-app/main/default/objects/CRMforNonProfit__NNOSettings__c/fields/CRMforNonProfit__AccountTransactions__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__AccountTransactions__c</fullName>
    <label>Typy transakcí sčítaných na firmu</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>peněžní dar</fullName>
            </value>
            <value>
                <fullName>nepeněžní dar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>