force-app/main/default/objects/CRMforNonProfit__NNOSettings__c/fields/CRMforNonProfit__CSAS_Auth_Code_Link__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__CSAS_Auth_Code_Link__c</fullName>
    <formula>&apos;https://bezpecnost.csas.cz/api/psd2/fl/oidc/v1/auth?redirect_uri=&apos; +  CRMforNonProfit__Redirect_URI_From_CMDT__c  + &apos;&amp;client_id=&apos; +  CRMforNonProfit__Client_Id_From_CMDT__c  + &apos;&amp;response_type=code&amp;access_type=offline&amp;scope=siblings.accounts&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSAS Auth Code Link</label>
    <type>Text</type>
</CustomField>