force-app/main/default/objects/CRMforNonProfit__NNOSettings__c/fields/CRMforNonProfit__CSAS_WS__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__CSAS_WS__c</fullName>
    <description>URL služby ČSAS Databanking 24</description>
    <label>ČSAS WS (nepouzivat)</label>
    <length>250</length>
    <type>Text</type>
</CustomField>