force-app/main/default/objects/CRMforNonProfit__NNOSettings__c/fields/CRMforNonProfit__DefaultAccount__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__DefaultAccount__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>DefaultAccount</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NNOSettings</relationshipLabel>
    <relationshipName>NNOSettings</relationshipName>
    <type>Lookup</type>
</CustomField>