force-app/main/default/objects/CRMforNonProfit__NNOSettings__c/fields/CRMforNonProfit__DefaultCampaign__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__DefaultCampaign__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>DefaultCampaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>NNOSettings</relationshipLabel>
    <relationshipName>NNOSettings</relationshipName>
    <type>Lookup</type>
</CustomField>