force-app/main/default/objects/CRMforNonProfit__NNOSettings__c/fields/CRMforNonProfit__DefaultContact__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__DefaultContact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>DefaultContact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>NNOSettings</relationshipLabel>
    <relationshipName>NNOSettings</relationshipName>
    <type>Lookup</type>
</CustomField>