force-app/main/default/objects/CRMforNonProfit__NNOSettings__c/fields/CRMforNonProfit__Disable_Outgoing_Transactions_Sync__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Disable_Outgoing_Transactions_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Outgoing Transactions Sync</label>
    <type>Checkbox</type>
</CustomField>