force-app/main/default/objects/CRMforNonProfit__NNOSettings__c/fields/CRMforNonProfit__DoNotCheckCampaigns__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__DoNotCheckCampaigns__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Transactions Check Campaign Delete</label>
    <type>Checkbox</type>
</CustomField>