force-app/main/default/objects/CRMforNonProfit__NNOSettings__c/fields/CRMforNonProfit__DoNotCheckContacts__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__DoNotCheckContacts__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If true related transactions will not be checked during contacts deletion</inlineHelpText>
    <label>No Transactions Check Contact Delete</label>
    <type>Checkbox</type>
</CustomField>