force-app/main/default/objects/CRMforNonProfit__NNOSettings__c/fields/CRMforNonProfit__Enable_Email_Processing_Delay__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Enable_Email_Processing_Delay__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Executes email processor with random delay (1-10 minutes) to avoid potential record lock issue.</inlineHelpText>
    <label>Enable Email Processing Delay</label>
    <type>Checkbox</type>
</CustomField>