force-app/main/default/objects/CRMforNonProfit__NNOSettings__c/fields/CRMforNonProfit__Eshopstatus__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Eshopstatus__c</fullName>
    <description>seznamem stavů, které se mají zpracovávat</description>
    <inlineHelpText>seznamem stavů, které se mají zpracovávat</inlineHelpText>
    <label>eshopStatusProcessed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>pending</fullName>
            </value>
            <value>
                <fullName>processing</fullName>
            </value>
            <value>
                <fullName>on-hold</fullName>
            </value>
            <value>
                <fullName>completed</fullName>
                <default>true</default>
                <label>completed</label>
            </value>
            <value>
                <fullName>cancelled</fullName>
            </value>
            <value>
                <fullName>refunded</fullName>
            </value>
            <value>
                <fullName>failed</fullName>
            </value>
            <value>
                <fullName>trash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>