force-app/main/default/objects/CRMforNonProfit__NNOSettings__c/fields/CRMforNonProfit__George_Auth_Code__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__George_Auth_Code__c</fullName>
    <label>George Auth Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>