force-app/main/default/objects/CRMforNonProfit__NNOSettings__c/fields/CRMforNonProfit__InboundEmailReprocessErrors__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__InboundEmailReprocessErrors__c</fullName>
    <description>Error texts delimited by comma, that will be reprocessed by InboundEmailReprocess batch</description>
    <label>Inbound Email Reprocess Errors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>