force-app/main/default/objects/CRMforNonProfit__NNOSettings__c/fields/CRMforNonProfit__InboundEmailReprocessOutage__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__InboundEmailReprocessOutage__c</fullName>
    <description>Max age (in days) of Inbound email to be reprocessed with InboundEmailReprocess batch</description>
    <label>Inbound email reprocess outage</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>