force-app/main/default/objects/CRMforNonProfit__NNOSettings__c/fields/CRMforNonProfit__Last_Transactions_Load_Date__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Last_Transactions_Load_Date__c</fullName>
    <label>Last Transactions Load</label>
    <type>DateTime</type>
</CustomField>