force-app/main/default/objects/CRMforNonProfit__NNOSettings__c/fields/CRMforNonProfit__Moneta_API_token__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Moneta_API_token__c</fullName>
    <label>Moneta API token</label>
    <length>100</length>
    <type>Text</type>
</CustomField>