force-app/main/default/objects/CRMforNonProfit__NNOSettings__c/fields/CRMforNonProfit__Moneta_Cisla_uctu__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Moneta_Cisla_uctu__c</fullName>
    <description>Čísla účtů (s lomítkem a číslem banky) které se mají zpracovat, oddělená čárkou.</description>
    <inlineHelpText>Čísla účtů (s lomítkem a číslem banky) které se mají zpracovat, oddělená čárkou.</inlineHelpText>
    <label>Moneta Čísla účtů</label>
    <length>255</length>
    <type>Text</type>
</CustomField>