force-app/main/default/objects/CRMforNonProfit__NNOSettings__c/fields/CRMforNonProfit__Moneta_Last_statement_load__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Moneta_Last_statement_load__c</fullName>
    <label>Moneta Datum posledního načteného výpisu</label>
    <type>Date</type>
</CustomField>