force-app/main/default/objects/CRMforNonProfit__NNOSettings__c/fields/CRMforNonProfit__Primary_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Primary_Account_Number__c</fullName>
    <description>Iban number</description>
    <label>Primary Account Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>