force-app/main/default/objects/CRMforNonProfit__NNOSettings__c/fields/CRMforNonProfit__Redirect_URI_From_CMDT__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Redirect_URI_From_CMDT__c</fullName>
    <formula>$CustomMetadata.CRMforNonProfit__George_Settings__mdt.CRMforNonProfit__Integration_info.CRMforNonProfit__Redirect_URI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Redirect URI From CMDT</label>
    <type>Text</type>
</CustomField>