force-app/main/default/objects/CRMforNonProfit__NNOSettings__c/fields/CRMforNonProfit__Refresh_Token__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Refresh_Token__c</fullName>
    <label>Refresh Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>