force-app/main/default/objects/CRMforNonProfit__NNOSettings__c/fields/CRMforNonProfit__Refresh_Token_Valid_To__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Refresh_Token_Valid_To__c</fullName>
    <label>Refresh Token Valid To</label>
    <type>Date</type>
</CustomField>