force-app/main/default/objects/CRMforNonProfit__NNOSettings__c/fields/CRMforNonProfit__Reminder_Admin_E_mail_Addresses__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Reminder_Admin_E_mail_Addresses__c</fullName>
    <description>Comma separated Email adresses for reminder e-mails</description>
    <label>Reminder Admin E-mail Addresses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>