force-app/main/default/objects/CRMforNonProfit__NNOSettings__c/fields/CRMforNonProfit__SumContactsOnAccount__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__SumContactsOnAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>zaškrtněte pokud chcete na firmě sečíst i dary navázaných kontaktů</inlineHelpText>
    <label>Sčítat dary kontaktů na firmě</label>
    <type>Checkbox</type>
</CustomField>