force-app/main/default/objects/CRMforNonProfit__NNOSettings__c/fields/CRMforNonProfit__Sync_Debet_Transactions__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Sync_Debet_Transactions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync Debet Transactions</label>
    <type>Checkbox</type>
</CustomField>