force-app/main/default/objects/CRMforNonProfit__NNOSettings__c/fields/CRMforNonProfit__Transactions_Load_End_Date__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Transactions_Load_End_Date__c</fullName>
    <label>Transactions Load End Date</label>
    <type>DateTime</type>
</CustomField>