force-app/main/default/objects/CRMforNonProfit__NNOSettings__c/fields/CRMforNonProfit__VS_Generate__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__VS_Generate__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Pokud je zaškrtnuto dochází k automatickému generování variabilního čísla členů kampaně (4 čísla z variabilního symbolu kampaně + 6 čísel pořadové čísla člena kampaně)</inlineHelpText>
    <label>Generovat VS členů kampaně</label>
    <type>Checkbox</type>
</CustomField>