force-app/main/default/objects/CRMforNonProfit__NNOSettings__c/fields/CRMforNonProfit__VS_Length__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__VS_Length__c</fullName>
    <defaultValue>10</defaultValue>
    <inlineHelpText>jak dlouhý variabilní symbol se má generovat na členovi kampaně</inlineHelpText>
    <label>Délka VS</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>