force-app/main/default/objects/CRMforNonProfit__NNOSettings__c/listViews/CRMforNonProfit__All.listView-meta.xml
<ListView>
    <fullName>CRMforNonProfit__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>